--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+.example-icon {
+    padding: 0 4px;
+  }
+  
+  .spacer {
+    flex: 1 1 auto;
+  }
