--- a/src/app/setproduct/setproduct.component.html
+++ b/src/app/setproduct/setproduct.component.html
@@ -2,7 +2,7 @@
 <mat-card>
   <mat-card-content>
     <div *ngIf="(toggleField=='searchMode') else (toggleField=='addMode')? 
-    showAddMode : ((toggleField=='editMode')?showEditMode:showResMode)">
+    showAddMode : ((toggleField=='editMode')? showEditMode: showResMode)">
       <form #searchFormData="ngForm" class="example-form">
         <mat-card-actions>
           <button type="button" (click)="toogle('resMode'); getFilterData(searchFormData.value);" mat-raised-button
@@ -145,7 +145,7 @@
           <mat-error *ngIf="error">Error: {{errorMassage}}</mat-error>
           <mat-card-actions align="start">
             <button type="submit" mat-raised-button [disabled]="!this.editDataForm.valid || this.editDataForm.pristine" color="primary">Update</button>
-            <button type="reset" (click)="this.editDataForm.reset();" mat-raised-button [disabled]="!addDataForm.valid.value"
+            <button type="reset" (click)="this.editDataForm.reset();" mat-raised-button [disabled]="!this.editDataForm.valid.value"
               color="primary">Clear</button>
             <span class="med-spacer"></span>
             <span matTootilp="Search">
@@ -229,66 +229,50 @@
     
         <!-- category Column -->
         <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
-          <td mat-cell *matCellDef="let row"> {{row.category}} </td>
+          <mat-header-cell *matHeaderCellDef mat-sort-header> Category </mat-header-cell>
+          <mat-cell *matCellDef="let row"> {{row.category}} </mat-cell>
         </ng-container>
 
         <!-- SubCategory Column -->
-        <ng-contrainer matColumnDef="scategory">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> SubCategory </th>
-            <td mat-cell *matCellDef="let row"> {{row.scategory}} </td>
+        <ng-container matColumnDef="scategory">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> SubCategory </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.scategory}} </mat-cell>
         </ng-container>
 
          <!-- Name Column -->
-         <ng-contrainer matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+         <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
         </ng-container>
 
          <!-- Price Column -->
-         <ng-contrainer matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-            <td mat-cell *matCellDef="let row"> {{row.price}} </td>
+         <ng-container matColumnDef="price">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.price}} </mat-cell>
         </ng-container >
     
-         <ng-contrainer matColumnDef="id">
+         <ng-container matColumnDef="id">
            <mat-header-cell *matHeaderCellDef>action</mat-header-cell>
-           <mat-cell *matHeaderCellDef="let row">
-              <button mat-icon-button matTooltip="Show Picture" *ngIf="row.path" 
-              (click)="getPic(row.path);this.showHostSelfie=true;">
-                <mat-icon color="primary">photo_camera</mat-icon>
+           <mat-cell  *matCellDef="let row">
+            <span matTooltip="Edit">
+              <button mat-icon-button (click)="getDoc(row.id)">
+                <mat-icon color="primary">edit</mat-icon>
               </button>
-              <button mat-icon-button matTooltip="Show Picture" *ngIf="row.path" 
-              (click)="getPic(row.path);this.showHostSelfie=true;">
-                <mat-icon color="primary">photo_camera</mat-icon>
-              </button>
-              <button mat-icon-button matTooltip="Remove Picture" *ngIf="row.path" 
-              (click)="deleteProductPic(row.id);this.showHostSelfie=false;">
-                <mat-icon color="primary">camera_roll</mat-icon>
-              </button>
-              <button mat-icon-button matTooltip="Take Picture"  class="label-error"
-              (click)="this.myDocId=row.id;this.takeHostSelfie=true;" class="label-error" *ngIf="!row.path">
-                <mat-icon color="primary">camera_roll</mat-icon>
-              </button>
-              <span matTooltip="Edit">
-                <button mat-icon-button (click)="getDoc(row.id)">
-                  <mat-icon color="primary">edit</mat-icon>
+            </span>
+            <span matTooltip="Delete">
+                <button mat-icon-button (click)="deleteDoc(row.id)">
+                  <mat-icon color="primary">delete</mat-icon>
                 </button>
-              </span>
-              <span matTooltip="Delete">
-                  <button mat-icon-button (click)="deleteDoc(row.id)">
-                    <mat-icon color="primary">delete</mat-icon>
-                  </button>
-              </span>
-            </mat-cell>
-         </ng-contrainer>
+            </span>
+           </mat-cell>
+         </ng-container>
     
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;">
         </mat-row>
       </table>
     
-      <mat-paginator #paginator [length]="dataSource.filterData.length" [pageIndex]="0"
+      <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0"
       [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </div>
 </ng-template>
