--- a/src/app/admin/admintab/admintab.component.html
+++ b/src/app/admin/admintab/admintab.component.html
@@ -1,3 +1,7 @@
-<p>
-  admintab works!
-</p>
+<header pageTitle="Admin" iconTitle="settings" helpTitle="About us page help"></header>
+<mat-tab-group>
+    <mat-tab label="users"><adminusers></adminusers></mat-tab>
+    <mat-tab label="products"><set-product></set-product></mat-tab>
+    <mat-tab label="carts"><admincarts></admincarts></mat-tab>
+    <mat-tab label="orders"><adminorders></adminorders> </mat-tab>
+  </mat-tab-group>
