--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,11 +1,6 @@
-<header pageTitle = "Setting" inconTitle="settings" helpTitle="page setting"></header>
-<mat-card>
-    <mat-card-title>
-        Setting  page
-    </mat-card-title>
-    <mat-card-content>
-      <div>
-        <button routerLink='/aboutus'>goto aboutus</button>
-      </div>
-    </mat-card-content>
-</mat-card>
+<header pageTitle = "Settings" inconTitle="settings" helpTitle="settingspagehelp"></header>
+<mat-tab-group>
+    <mat-tab label="Info"><user></user></mat-tab>
+    <mat-tab label="Carts"><carts></carts></mat-tab>
+    <mat-tab label="Orders"><orders></orders></mat-tab>
+  </mat-tab-group>
