--- a/src/app/user/product/product.component.html
+++ b/src/app/user/product/product.component.html
@@ -16,12 +16,12 @@
   </mat-card-actions>
   <mat-card-content *ngIf="toggle else showProductDetails">
     <mat-list>
-        <mat-list-item *ngFor="let item of members | async" (click)="showDetails(item);toggle=!toggle">
-          <h5 mat-line>
-            {{item.name}}
-            <mat-icon mat-list-icon>pageview</mat-icon>
-          </h5>
-          <p class="label-hint" mat-line>{{item.category}}/{{item.scategory}}</p>
+            <mat-list-item *ngFor="let item of members" (click)="showDetails(item);toggle=!toggle">
+              <h5 mat-line>
+                {{item.name}}
+                <mat-icon mat-list-icon>pageview</mat-icon>
+              </h5>
+              <p class="label-hint" mat-line>{{item.category}}/{{item.scategory}}</p>
           </mat-list-item>
     </mat-list>
   </mat-card-content>
@@ -51,8 +51,8 @@
     <mat-icon (click)="countProd('add')" color="primary">add</mat-icon>
     <span class="med-spacer"></span>
     <div>
-      <button [disabled]="counter < 1" mat-raised-button color="primary" (click)="addToCart(myDocData,counter)">Add to cart</button>
+      <button [disabled]='counter < 1' mat-raised-button color="primary" (click)="addToCart(myDocData,counter)">Add to cart</button>
     </div>
-    <img [src]="profilUrl | async" width="300" height="300">
+    <img [src]="profilUrl" width="300" height="300">
   </ng-template>
 </mat-card>
