--- a/src/app/admin/admincarts/admincarts.component.html
+++ b/src/app/admin/admincarts/admincarts.component.html
@@ -1,3 +1,198 @@
-<p>
-  admincarts works!
-</p>
+<mat-card>
+    <mat-card-content>
+      <div *ngIf="(toggleField=='searchMode') else (toggleField=='addMode')? 
+      showAddMode : ((toggleField=='editMode')? showEditMode: showResMode)">
+        <form #searchFormData="ngForm" class="example-form">
+          <mat-card-actions>
+            <button type="button" (click)="toogle('resMode'); getFilterData(searchFormData.value);" mat-raised-button
+              [disabled]="!searchFormData.valid" color="primary">
+              Search
+            </button>
+            <span class="icon"></span>
+            <span matTooltip="Show Recent Results">
+              <mat-icon color="primary" (click)="toogle('resMode');getData();">cached</mat-icon>
+            </span>
+          </mat-card-actions>
+          <div>
+            <mat-form-field class="example-form">
+              <input matInput type="text" placeholder="User id" name="userid" #userid="ngModel" ngModel minlength="3"
+                maxlength="50">
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field class="example-form">
+              <input matInput type="text" placeholder="Product Name" name="name" #name="ngModel" ngModel minlength="3"
+                maxlength="50">
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field class="example-form">
+              <input matInput [matDatepicker]="pickerfromdt" placeholder="from Date" name="fromdt" #fromdt="ngModel"
+                ngModel>
+              <mat-datepicker-toggle matSuffix [for]="pickerfromdt"></mat-datepicker-toggle>
+              <mat-datepicker #pickerfromdt></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field class="example-form">
+              <input matInput [matDatepicker]="pickertodt" placeholder="to Date" name="todt" #todt="ngModel" ngModel>
+              <mat-datepicker-toggle matSuffix [for]="pickertodt"></mat-datepicker-toggle>
+              <mat-datepicker #pickertodt></mat-datepicker>
+            </mat-form-field>
+          </div>
+        </form>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <ng-template #showEditMode>
+      <form #editDataForm="ngForm" (ngSubmit)="updateData(editDataForm.value);" novalidate>
+        <input type="hidden" name="id" [(ngModel)]="myDocData.id" required>
+        <mat-error *ngIf="savedChanges">
+            Data is saved
+            <label class="small-spacer"></label>
+            <mat-icon (click)="this.editDataForm.reset();savedChanges=false;toggle('searchMode');">clear</mat-icon>
+        </mat-error>
+        <div *ngIf="!savedChanges">
+            <mat-progress-bar mode="indeterminate" *ngIf="dataLoading"></mat-progress-bar>
+            <mat-error *ngIf="error">Error: {{errorMassage}}</mat-error>
+            <mat-card-actions align="start">
+              <button type="submit" mat-raised-button [disabled]="!this.editDataForm.valid || this.editDataForm.pristine" color="primary">Update</button>
+              <button type="reset" (click)="this.editDataForm.reset();" mat-raised-button [disabled]="!this.editDataForm.valid.value"
+                color="primary">Clear</button>
+              <span class="med-spacer"></span>
+              <span matTootilp="Search">
+                <mat-icon color="primary" (click)="toggle('searchMode');">search</mat-icon>
+              </span>
+              <span class="small-spacer"></span>
+              <span matTooltip="Show Recent Results">
+                <mat-icon color="primary" (click)="toogle('resMode');getData();">cached</mat-icon>
+              </span>
+            </mat-card-actions>
+            <div>
+              <mat-form-field>
+                <input matInput placeholder="user Id" name="user Id" [(ngModel)]="myDocData.userid" required minlength="1">
+                <mat-hint align="end">User Id</mat-hint>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <input matInput placeholder="Sub Category" name="scategory" [(ngModel)]="myDocData.scategory"  required minlength="1">
+                <mat-hint align="end">eg. Shirt</mat-hint>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <textarea matInput placeholder="*IMP*: Search use Tags Text" name="tags" [(ngModel)]="myDocData.tags" required minlength="1"></textarea>
+                <mat-hint align="end">eg. Men,Reading,Glasses</mat-hint>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <input matInput placeholder="Product Name" name="name" [(ngModel)]="myDocData.name" required minlength="1">
+                <mat-hint align="end">eg. Shirt</mat-hint>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <input matInput placeholder="Short Name" name="sname" [(ngModel)]="myDocData.sname">
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <input matInput placeholder="Long Name" name="lname" [(ngModel)]="myDocData.lname">
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <textarea matInput placeholder="Description" name="descr" [(ngModel)]="myDocData.lname"></textarea>
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <input matInput placeholder="Color" name="color" [(ngModel)]="myDocData.color">
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Size" name="size" [(ngModel)]="myDocData.size">
+              </mat-form-field>
+              <mat-form-field>
+                  <input matInput placeholder="Qty" name="qty" required pattern="[0-9]+" [(ngModel)]="myDocData.qty">
+                </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Price" name="price" required pattern="[0-9]+" [(ngModel)]="myDocData.price">
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Shipping" name="shipping" required pattern="[0-9]+" [(ngModel)]="myDocData.shipping">
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Discount" name="discount" required pattern="[0-9]+" [(ngModel)]="myDocData.discount">
+                <mat-hint align="end">eg. 0 if no discount is offered</mat-hint>
+              </mat-form-field>
+            </div>
+          </div>   
+        </form>
+  </ng-template>
+  
+  <ng-template #showResMode>
+    <span class="example-icon"></span>
+    <span class="example-icon"></span>
+    <span matTooltip="Show Recent Results">
+        <mat-icon color="primary" (color)="toogle('searchMode');">search</mat-icon>
+    </span>
+    <div>
+      <mat-form-field>
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+      </mat-form-field>
+    </div>
+    
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+      
+          <!-- category Column -->
+          <ng-container matColumnDef="userid">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Category </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.category}} </mat-cell>
+          </ng-container>
+  
+          <!-- SubCategory Column -->
+          <ng-container matColumnDef="scategory">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> SubCategory </mat-header-cell>
+              <mat-cell *matCellDef="let row"> {{row.scategory}} </mat-cell>
+          </ng-container>
+  
+           <!-- Name Column -->
+           <ng-container matColumnDef="name">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+              <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+          </ng-container>
+  
+           <!-- Price Column -->
+           <ng-container matColumnDef="price">
+              <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
+              <mat-cell *matCellDef="let row"> {{row.price}} </mat-cell>
+          </ng-container >
+      
+           <ng-container matColumnDef="id">
+             <mat-header-cell *matHeaderCellDef>action</mat-header-cell>
+             <mat-cell  *matCellDef="let row">
+              <span matTooltip="Edit">
+                <button mat-icon-button (click)="getDoc(row.id)">
+                  <mat-icon color="primary">edit</mat-icon>
+                </button>
+              </span>
+              <span matTooltip="Delete">
+                  <button mat-icon-button (click)="deleteDoc(row.id)">
+                    <mat-icon color="primary">delete</mat-icon>
+                  </button>
+              </span>
+             </mat-cell>
+           </ng-container>
+      
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;">
+          </mat-row>
+        </table>
+      
+        <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0"
+        [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+      </div>
+  </ng-template>
