--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,10 @@
   <span class="icon"></span>
   {{pageTitle}}
   <span class="spacer"></span>
-  <mat-icon [color]="userStatusColor">account_box</mat-icon>
+  <mat-icon [color]="userStatusColor" routerLink = "/product">shop</mat-icon>
+  <span class="exemple-icon"></span>
+  <mat-icon [color]="userStatusColor" routerLink = "/settings">account_box</mat-icon>
+  <span class="exemple-icon"></span>
   <mat-icon matBadge="{{counter}}" matBadgePosition="before" matBadgeColor="accent">shopping_cart</mat-icon>
   <mat-icon [matMenuTriggerFor]="helpMenu">help</mat-icon>
 
